# Visio-Shapes-Server

./: CLAUDE.md  Dockerfile  README.md  config.py  env_example  example_.env  example_docker-compose.yml  pyproject.toml
.claude/: settings.local.json
app/: __init__.py  extensions.py
app/blueprints/account/: __init__.py  routes.py
app/blueprints/admin/: routes.py
app/blueprints/auth/: routes.py
app/blueprints/visio/: __init__.py  routes.py
app/models/: auth.py  visio.py
app/static/css/: browser.css  design.css  panel.css  style.css
app/static/js/: account.js  app.js  browse.js  router.js  shape-card.js
app/static/js/components/: shape-card.js  web-component.js
app/templates/: base.html  base_browser.html  base_panel.html  index.html
app/templates/auth/: login.html  register.html
app/templates/browser/: account.html  admin_team_detail.html  admin_teams.html  admin_user_detail.html  admin_users.html  browse.html  datenschutz.html  impressum.html  landing.html  login.html  register.html  reset_password.html
app/templates/panel/: panel.html
app/templates/spa/: index.html
app/templates/visio/: index.html
app/translations/de/LC_MESSAGES/: messages.po
app/translations/en/LC_MESSAGES/: messages.po
app/utilities/: __init__.py  status_mail.py
migrations/versions/: 13dfc56ae7e5_add_teams_feature.py  62ddbd341724_add_pending_password_hash_to_user.py  fe3026960e32_init.py  ffcebb9c4161_add_pending_email_to_user.py
